fixes alignment bugs

--- a/app.css
+++ b/app.css
@@ -198,6 +198,9 @@ footer {
        max-width: 1200px;
     }
     
+    .image.portrait{
+        max-width: 250px;
+    }
     #hero{
         margin-left: 0;
     }
@@ -206,12 +209,22 @@ footer {
         max-width: 700px;
         
     }
-    
+    .intro-post {
+        max-width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .intro-post.about-me {
+        display: flex;
+        justify-content: space-between;
+        gap: 1.5em;
+        padding-top: 2em;
+    }
     #articles {
         display: grid;
         gap: 2em;
         /* grid-template-columns: auto-fit, minmax(100px, 1fr); */
-        grid-template-columns: repeat(auto-fit, minmax(330px, 1fr))
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr))
     }
 
 }
